Revision history for File-Serialize

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]

 [DOCUMENTATION]

 [ENHANCEMENTS]
 - Allow 'allow_nonref' option for JSON.
 - New script 'transerialize'.
 - Serializers moved in their own classes.

 [NEW FEATURES]

 [STATISTICS]

0.5.0 2015-03-21
 [ENHANCEMENTS]
 - add support for XML files.
 - final link of transerialize_file can be a scalar ref.

 [STATISTICS]
 - code churn: 7 files changed, 54 insertions(+), 5 deletions(-)

0.4.1 2015-03-19
 [BUG FIXES]
 - test transerialize.t made optional to the presence of JSON::MaybeXS.
 - add JSON/YAML modules as runtime recommendations.

 [STATISTICS]
 - code churn: 3 files changed, 16 insertions(+), 1 deletion(-)

0.4.0 2015-03-18
 [ENHANCEMENTS]
 - Use utf8 slurp/spew by default now. (GH#1, genehack)

 [STATISTICS]
 - code churn: 10 files changed, 65 insertions(+), 12 deletions(-)

0.3.0 2015-03-16
 [ENHANCEMENTS]
 - Added 'transerialize_file'. For the lulz.

 [STATISTICS]
 - code churn: 5 files changed, 237 insertions(+), 5 deletions(-)

0.2.0 2015-02-25
 [ENHANCEMENTS]
 - Change YAML for YAML::Tiny.
 - Add option 'canonical'.

 [STATISTICS]
 - code churn: 3 files changed, 21 insertions(+), 7 deletions(-)

0.1.0 2015-02-19
 [ENHANCEMENTS]
 - adding 'add_extension'.

 [STATISTICS]
 - code churn: 10 files changed, 235 insertions(+), 177 deletions(-)

0.0.1 2015-02-18
 - First version, unleashed on an unsuspecting world.

 [STATISTICS]
 - code churn: 6 files changed, 35 insertions(+), 7 deletions(-)
