@@ -62,7 +62,7 @@ L<JSON::MaybeXS>
 
 =item supported options
 
-pretty, canonical, allow_nonref (default: true)
+pretty (default: true), canonical (default: true), allow_nonref (default: true)
 
 =back
 
